// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WindowSplitter > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<button
  aria-controls="does-not-exist"
  aria-label="Window Splitter"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg"
  id="splitter-_r_0_"
  role="separator"
  type="button"
/>
`;

exports[`WindowSplitter > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<button
  aria-controls="does-not-exist"
  aria-label="Window Splitter"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg custom-class-name"
  id="splitter-_r_0_"
  role="separator"
  style="color: white;"
  type="button"
/>
`;

exports[`WindowSplitter > should be able to render vertically 1`] = `
<button
  aria-controls="does-not-exist"
  aria-label="Window Splitter"
  aria-orientation="vertical"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--v rmd-window-splitter--no-inactive-bg"
  id="splitter-_r_1_"
  role="separator"
  type="button"
/>
`;

exports[`WindowSplitter > should be able to show an inactive bg while horizontal or vertical 1`] = `
<button
  aria-controls="whatever"
  aria-label="Window Splitter"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--h rmd-window-splitter--no-inactive-bg"
  id="splitter-_r_2_"
  role="separator"
  type="button"
/>
`;

exports[`WindowSplitter > should be able to show an inactive bg while horizontal or vertical 2`] = `
<button
  aria-controls="whatever"
  aria-label="Window Splitter"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--h"
  id="splitter-_r_2_"
  role="separator"
  type="button"
/>
`;

exports[`WindowSplitter > should be able to show an inactive bg while horizontal or vertical 3`] = `
<button
  aria-controls="whatever"
  aria-label="Window Splitter"
  aria-orientation="vertical"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--v rmd-window-splitter--no-inactive-bg"
  id="splitter-_r_2_"
  role="separator"
  type="button"
/>
`;

exports[`WindowSplitter > should be able to show an inactive bg while horizontal or vertical 4`] = `
<button
  aria-controls="whatever"
  aria-label="Window Splitter"
  aria-orientation="vertical"
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="rmd-window-splitter rmd-window-splitter--v"
  id="splitter-_r_2_"
  role="separator"
  type="button"
/>
`;
